seaqt/QtWidgets/gen_qgraphicswidget.h

class QFont;
class QGraphicsItem;
class QGraphicsLayout;
class QGraphicsWidget;
class QKeySequence;
class QMarginsF;
class QMetaObject;
class QPalette;
class QRectF;
class QSizeF;
class QStyle;
typedef struct QFont QFont;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsLayout QGraphicsLayout;
typedef struct QGraphicsSceneMouseEvent QGraphicsSceneMouseEvent;
typedef struct QGraphicsSceneWheelEvent QGraphicsSceneWheelEvent;
typedef struct QGraphicsWidget QGraphicsWidget;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QKeySequence QKeySequence;
typedef struct QMarginsF QMarginsF;
typedef struct QMetaObject QMetaObject;
typedef struct QPalette QPalette;
typedef struct QRectF QRectF;
typedef struct QSizeF QSizeF;
typedef struct QStyle QStyle;
typedef struct QVariant QVariant;
bool QGraphicsWidget_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QGraphicsWidget_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_mousePressEvent(void* self, QGraphicsSceneMouseEvent* event);
bool QGraphicsWidget_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_mouseMoveEvent(void* self, QGraphicsSceneMouseEvent* event);
bool QGraphicsWidget_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_mouseReleaseEvent(void* self, QGraphicsSceneMouseEvent* event);
bool QGraphicsWidget_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_mouseDoubleClickEvent(void* self, QGraphicsSceneMouseEvent* event);
bool QGraphicsWidget_override_virtual_wheelEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_wheelEvent(void* self, QGraphicsSceneWheelEvent* event);
bool QGraphicsWidget_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* event);
bool QGraphicsWidget_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QGraphicsWidget_virtualbase_inputMethodQuery(const void* self, int query);
bool QGraphicsWidget_override_virtual_supportsExtension(void* self, intptr_t slot);
bool QGraphicsWidget_virtualbase_supportsExtension(const void* self, int extension);
bool QGraphicsWidget_override_virtual_setExtension(void* self, intptr_t slot);
void QGraphicsWidget_virtualbase_setExtension(void* self, int extension, QVariant* variant);
bool QGraphicsWidget_override_virtual_extension(void* self, intptr_t slot);
QVariant* QGraphicsWidget_virtualbase_extension(const void* self, QVariant* variant);
void QGraphicsWidget_delete(QGraphicsWidget* self);