seaqt/QtWidgets/gen_qgraphicswidget.nim

proc fQGraphicsWidget_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_keyReleaseEvent".}
proc fcQGraphicsWidget_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_keyReleaseEvent".}
proc fQGraphicsWidget_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_mousePressEvent".}
proc fcQGraphicsWidget_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_mousePressEvent".}
proc fQGraphicsWidget_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_mouseMoveEvent".}
proc fcQGraphicsWidget_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_mouseMoveEvent".}
proc fQGraphicsWidget_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_mouseReleaseEvent".}
proc fcQGraphicsWidget_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_mouseReleaseEvent".}
proc fQGraphicsWidget_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_mouseDoubleClickEvent".}
proc fcQGraphicsWidget_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_mouseDoubleClickEvent".}
proc fQGraphicsWidget_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_wheelEvent".}
proc fcQGraphicsWidget_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_wheelEvent".}
proc fQGraphicsWidget_virtualbase_inputMethodEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWidget_virtualbase_inputMethodEvent".}
proc fcQGraphicsWidget_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_inputMethodEvent".}
proc fQGraphicsWidget_virtualbase_inputMethodQuery(self: pointer, query: cint): pointer{.importc: "QGraphicsWidget_virtualbase_inputMethodQuery".}
proc fcQGraphicsWidget_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_inputMethodQuery".}
proc fQGraphicsWidget_virtualbase_supportsExtension(self: pointer, extension: cint): bool{.importc: "QGraphicsWidget_virtualbase_supportsExtension".}
proc fcQGraphicsWidget_override_virtual_supportsExtension(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_supportsExtension".}
proc fQGraphicsWidget_virtualbase_setExtension(self: pointer, extension: cint, variant: pointer): void{.importc: "QGraphicsWidget_virtualbase_setExtension".}
proc fcQGraphicsWidget_override_virtual_setExtension(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_setExtension".}
proc fQGraphicsWidget_virtualbase_extension(self: pointer, variant: pointer): pointer{.importc: "QGraphicsWidget_virtualbase_extension".}
proc fcQGraphicsWidget_override_virtual_extension(self: pointer, slot: int) {.importc: "QGraphicsWidget_override_virtual_extension".}
proc fcQGraphicsWidget_delete(self: pointer) {.importc: "QGraphicsWidget_delete".}


func init*(T: type gen_qgraphicswidget_types.QGraphicsWidget, h: ptr cQGraphicsWidget): gen_qgraphicswidget_types.QGraphicsWidget =
  T(h: h)
proc create*(T: type gen_qgraphicswidget_types.QGraphicsWidget, ): gen_qgraphicswidget_types.QGraphicsWidget =
  gen_qgraphicswidget_types.QGraphicsWidget.init(fcQGraphicsWidget_new())

proc create*(T: type gen_qgraphicswidget_types.QGraphicsWidget, parent: gen_qgraphicsitem_types.QGraphicsItem): gen_qgraphicswidget_types.QGraphicsWidget =
  gen_qgraphicswidget_types.QGraphicsWidget.init(fcQGraphicsWidget_new2(parent.h))

proc create*(T: type gen_qgraphicswidget_types.QGraphicsWidget, parent: gen_qgraphicsitem_types.QGraphicsItem, wFlags: cint): gen_qgraphicswidget_types.QGraphicsWidget =
  gen_qgraphicswidget_types.QGraphicsWidget.init(fcQGraphicsWidget_new3(parent.h, cint(wFlags)))

proc metaObject*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQGraphicsWidget_metaObject(self.h))

proc metacast*(self: gen_qgraphicswidget_types.QGraphicsWidget, param1: cstring): pointer =
  fcQGraphicsWidget_metacast(self.h, param1)

proc tr*(_: type gen_qgraphicswidget_types.QGraphicsWidget, s: cstring): string =
  let v_ms = fcQGraphicsWidget_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qgraphicswidget_types.QGraphicsWidget, s: cstring): string =
  let v_ms = fcQGraphicsWidget_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc layout*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): gen_qgraphicslayout_types.QGraphicsLayout =
  gen_qgraphicslayout_types.QGraphicsLayout(h: fcQGraphicsWidget_layout(self.h))

proc setLayout*(self: gen_qgraphicswidget_types.QGraphicsWidget, layout: gen_qgraphicslayout_types.QGraphicsLayout): void =
  fcQGraphicsWidget_setLayout(self.h, layout.h)

proc adjustSize*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): void =
  fcQGraphicsWidget_adjustSize(self.h)

proc layoutDirection*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): cint =
  cint(fcQGraphicsWidget_layoutDirection(self.h))

proc setLayoutDirection*(self: gen_qgraphicswidget_types.QGraphicsWidget, direction: cint): void =
  fcQGraphicsWidget_setLayoutDirection(self.h, cint(direction))

proc unsetLayoutDirection*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): void =
  fcQGraphicsWidget_unsetLayoutDirection(self.h)

proc style*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): gen_qstyle_types.QStyle =
  gen_qstyle_types.QStyle(h: fcQGraphicsWidget_style(self.h))

proc setStyle*(self: gen_qgraphicswidget_types.QGraphicsWidget, style: gen_qstyle_types.QStyle): void =
  fcQGraphicsWidget_setStyle(self.h, style.h)

proc font*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): gen_qfont_types.QFont =
  gen_qfont_types.QFont(h: fcQGraphicsWidget_font(self.h))

proc setFont*(self: gen_qgraphicswidget_types.QGraphicsWidget, font: gen_qfont_types.QFont): void =
  fcQGraphicsWidget_setFont(self.h, font.h)

proc palette*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): gen_qpalette_types.QPalette =
  gen_qpalette_types.QPalette(h: fcQGraphicsWidget_palette(self.h))

proc setPalette*(self: gen_qgraphicswidget_types.QGraphicsWidget, palette: gen_qpalette_types.QPalette): void =
  fcQGraphicsWidget_setPalette(self.h, palette.h)

proc autoFillBackground*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): bool =
  fcQGraphicsWidget_autoFillBackground(self.h)

proc setAutoFillBackground*(self: gen_qgraphicswidget_types.QGraphicsWidget, enabled: bool): void =
  fcQGraphicsWidget_setAutoFillBackground(self.h, enabled)

proc resize*(self: gen_qgraphicswidget_types.QGraphicsWidget, size: gen_qsize_types.QSizeF): void =
  fcQGraphicsWidget_resize(self.h, size.h)

proc resize*(self: gen_qgraphicswidget_types.QGraphicsWidget, w: float64, h: float64): void =
  fcQGraphicsWidget_resize2(self.h, w, h)

proc size*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): gen_qsize_types.QSizeF =
  gen_qsize_types.QSizeF(h: fcQGraphicsWidget_size(self.h))

proc setGeometry*(self: gen_qgraphicswidget_types.QGraphicsWidget, rect: gen_qrect_types.QRectF): void =
  fcQGraphicsWidget_setGeometry(self.h, rect.h)

proc setGeometry*(self: gen_qgraphicswidget_types.QGraphicsWidget, x: float64, y: float64, w: float64, h: float64): void =
  fcQGraphicsWidget_setGeometry2(self.h, x, y, w, h)

proc rect*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): gen_qrect_types.QRectF =
  gen_qrect_types.QRectF(h: fcQGraphicsWidget_rect(self.h))

proc setContentsMargins*(self: gen_qgraphicswidget_types.QGraphicsWidget, left: float64, top: float64, right: float64, bottom: float64): void =
  fcQGraphicsWidget_setContentsMargins(self.h, left, top, right, bottom)

proc setContentsMargins*(self: gen_qgraphicswidget_types.QGraphicsWidget, margins: gen_qmargins_types.QMarginsF): void =
  fcQGraphicsWidget_setContentsMarginsWithMargins(self.h, margins.h)

proc getContentsMargins*(self: gen_qgraphicswidget_types.QGraphicsWidget, left: ptr float64, top: ptr float64, right: ptr float64, bottom: ptr float64): void =
  fcQGraphicsWidget_getContentsMargins(self.h, left, top, right, bottom)

proc setWindowFrameMargins*(self: gen_qgraphicswidget_types.QGraphicsWidget, left: float64, top: float64, right: float64, bottom: float64): void =
  fcQGraphicsWidget_setWindowFrameMargins(self.h, left, top, right, bottom)

proc setWindowFrameMargins*(self: gen_qgraphicswidget_types.QGraphicsWidget, margins: gen_qmargins_types.QMarginsF): void =
  fcQGraphicsWidget_setWindowFrameMarginsWithMargins(self.h, margins.h)

proc getWindowFrameMargins*(self: gen_qgraphicswidget_types.QGraphicsWidget, left: ptr float64, top: ptr float64, right: ptr float64, bottom: ptr float64): void =
  fcQGraphicsWidget_getWindowFrameMargins(self.h, left, top, right, bottom)

proc unsetWindowFrameMargins*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): void =
  fcQGraphicsWidget_unsetWindowFrameMargins(self.h)

proc windowFrameGeometry*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): gen_qrect_types.QRectF =
  gen_qrect_types.QRectF(h: fcQGraphicsWidget_windowFrameGeometry(self.h))

proc windowFrameRect*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): gen_qrect_types.QRectF =
  gen_qrect_types.QRectF(h: fcQGraphicsWidget_windowFrameRect(self.h))

proc windowFlags*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): cint =
  cint(fcQGraphicsWidget_windowFlags(self.h))

proc windowType*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): cint =
  cint(fcQGraphicsWidget_windowType(self.h))

proc setWindowFlags*(self: gen_qgraphicswidget_types.QGraphicsWidget, wFlags: cint): void =
  fcQGraphicsWidget_setWindowFlags(self.h, cint(wFlags))

proc isActiveWindow*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): bool =
  fcQGraphicsWidget_isActiveWindow(self.h)

proc setWindowTitle*(self: gen_qgraphicswidget_types.QGraphicsWidget, title: string): void =
  fcQGraphicsWidget_setWindowTitle(self.h, struct_miqt_string(data: title, len: csize_t(len(title))))

proc windowTitle*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): string =
  let v_ms = fcQGraphicsWidget_windowTitle(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc focusPolicy*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): cint =
  cint(fcQGraphicsWidget_focusPolicy(self.h))

proc setFocusPolicy*(self: gen_qgraphicswidget_types.QGraphicsWidget, policy: cint): void =
  fcQGraphicsWidget_setFocusPolicy(self.h, cint(policy))

proc setTabOrder*(_: type gen_qgraphicswidget_types.QGraphicsWidget, first: gen_qgraphicswidget_types.QGraphicsWidget, second: gen_qgraphicswidget_types.QGraphicsWidget): void =
  fcQGraphicsWidget_setTabOrder(first.h, second.h)

proc focusWidget*(self: gen_qgraphicswidget_types.QGraphicsWidget, ): gen_qgraphicswidget_types.QGraphicsWidget =
  gen_qgraphicswidget_types.QGraphicsWidget(h: fcQGraphicsWidget_focusWidget(self.h))

proc grabShortcut*(self: gen_qgraphicswidget_types.QGraphicsWidget, sequence: gen_qkeysequence_types.QKeySequence): cint =
  fcQGraphicsWidget_grabShortcut(self.h, sequence.h)

proc releaseShortcut*(self: gen_qgraphicswidget_types.QGraphicsWidget, id: cint): void =
  fcQGraphicsWidget_releaseShortcut(self.h, id)

proc setShortcutEnabled*(self: gen_qgraphicswidget_types.QGraphicsWidget, id: cint): void =
  fcQGraphicsWidget_setShortcutEnabled(self.h, id)
